conf/admission-webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespaceprotects.hj.com
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $ca
#    url: https://$ip:8443/validate-np-params
    service:
      name: $svc
      namespace: $ns
      path: /validate-np-params
      port: 443
  namespaceSelector:
    matchExpressions:
      - key: 'kubernetes.io/metadata.name'
        operator: NotIn
        values:
          - kube-system
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-np-params.namespaceprotects.hj.com
  rules:
  - apiGroups:
    - hj.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - namespaceprotects
    scope: '*'
  sideEffects: None #NoneOnDryRun
  timeoutSeconds: 30
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $ca
#    url: https://$ip:8443/validate-resources-protect
    service:
      name: $svc
      namespace: $ns
      path: /validate-resources-protect
      port: 443
  namespaceSelector:
    matchExpressions:
    - key: 'kubernetes.io/metadata.name'
      operator: NotIn
      values:
      - kube-system
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-namespace.namespaceprotects.hj.com
  rules:
  - apiGroups:
    - ""
    - "apps"
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - namespaces
    - configmaps
    - secrets
    - services
    - deployments
    - statefulsets
    scope: '*'
  sideEffects: None #NoneOnDryRun
  timeoutSeconds: 30
